# grpc-server

./: .env  Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
